# dont-trust

./: Cargo.toml  README.md
src/: Soldier1.glb  main.rs
