[package]
name = "three-dee"
version = "0.1.0"
edition = "2024"

[dependencies]
async-tungstenite = "0.29.1"
futures-util = "0.3.31"
libc = "0.2.172"
noise = "0.9.0"
rand = "0.9.1"
raylib = "5.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
uuid = "1.16.0"
